<resources>
    <string name="app_name">calculadoraSESIO</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_lowbar">-</string>
    <string name="_1">1</string>
    <string name="_dot">.</string>
    <string name="taxes">TAXES</string>
    <string name="_equals">=</string>
    <string name="_add">÷</string>
    <string name="c">C</string>
    <string name="delete">DELETE</string>
    <string name="x">x</string>
    <string name="_div">+</string>
    <string name="_02">0</string>
    <string name="cantidad_de_dolares_usd">Cantidad de dolares (USD):</string>
    <string name="sin_impuestos">Sin Impuestos:</string>
    <string name="imp_a_la_ganancias_45">Imp. a la ganancias (45%):</string>
    <string name="impuesto_pais_30">Impuesto Pais (30%):</string>
    <string name="calcular">CALCULAR</string>
    <string name="ingrese_cantidad_de_usd">Ingrese cantidad de USD</string>
</resources>