<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:textSize="50sp"
        android:textAlignment="viewEnd"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH1" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:text="@string/_9"
        android:onClick="escribirNueve"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8A8A8A"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineV4"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:onClick="escribirOcho"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8A8A8A"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV4"
        app:layout_constraintStart_toStartOf="@+id/guidelineV3"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
        tools:ignore="UsingOnClickInXml" />


    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="escribirSiete"
        android:text="@string/_7"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8A8A8A"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV3"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8A8A8A"
        android:onClick="escribirSeis"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV5"
        app:layout_constraintStart_toStartOf="@+id/guidelineV4"
        app:layout_constraintTop_toTopOf="@+id/guidelineH4"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/_5"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        android:onClick="escribirCinco"
        app:backgroundTint="#8A8A8A"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV4"
        app:layout_constraintStart_toStartOf="@+id/guidelineV3"
        app:layout_constraintTop_toTopOf="@+id/guidelineH4"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:textSize="45sp"
        app:backgroundTint="#8A8A8A"
        android:onClick="escribirCuatro"
        android:textColor="#FFFFFF"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV3"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH4"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8A8A8A"
        android:onClick="escribirTres"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV5"
        app:layout_constraintStart_toStartOf="@+id/guidelineV4"
        app:layout_constraintTop_toTopOf="@+id/guidelineH5"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        android:onClick="escribirDos"
        app:backgroundTint="#8A8A8A"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV4"
        app:layout_constraintStart_toStartOf="@+id/guidelineV3"
        app:layout_constraintTop_toTopOf="@+id/guidelineH5"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="escribirUno"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8A8A8A"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV3"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH5"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/_02"
        android:onClick="escribirCero"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8A8A8A"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH17"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV4"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH6"
        tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:backgroundTint="#8A8A8A"
        android:onClick="punto"
        android:text="@string/_dot"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH17"
        app:layout_constraintEnd_toStartOf="@+id/btnResultado"
        app:layout_constraintStart_toStartOf="@+id/guidelineV4"
        app:layout_constraintTop_toTopOf="@+id/guidelineH6" />

    <Button
        android:id="@+id/btnCompras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="irACompras"
        android:text="DOLAR"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:backgroundTint="#535353"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV5"
        app:layout_constraintStart_toStartOf="@+id/guidelineV4"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <Button
        android:id="@+id/btnResultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/_equals"
        android:onClick="igual"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:backgroundTint="#F4C535"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH17"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="@+id/guidelineH6"
        tools:ignore="OnClick,TextContrastCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="sumar"
        android:text="@string/_div"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F4C535"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="@+id/guidelineH5"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="restar"
        android:text="@string/_lowbar"
        android:textSize="45sp"
        app:backgroundTint="#F4C535"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="@+id/guidelineH4"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/x"
        android:onClick="multiplicar"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:backgroundTint="#F4C535"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="dividir"
        android:text="@string/_add"
        android:textSize="45sp"
        app:backgroundTint="#F4C535"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/c"
        android:onClick="limpiarTv"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:backgroundTint="#535353"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV3"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="DEL"
        android:textSize="15sp"
        android:onClick="borrar"
        android:textColor="#FFFFFF"
        app:backgroundTint="#535353"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/btnCompras"
        app:layout_constraintStart_toStartOf="@+id/guidelineV3"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2"
        tools:ignore="UsingOnClickInXml" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.04"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.96"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.48"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.72"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.019826518" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.30"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.60"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp"
        app:layout_constraintGuide_percent="0.90"/>

</androidx.constraintlayout.widget.ConstraintLayout>